--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "astro": "^2.0.6",
     "web-vitals": "^3.1.1"
+  },
+  "dependencies": {
+    "unocss": "^0.50.4"
   }
 }
