--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web-vitals": "^3.1.1"
   },
   "dependencies": {
+    "@unocss/preset-web-fonts": "^0.50.4",
     "unocss": "^0.50.4"
   }
 }
