--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "astro": "^2.0.6",
+    "astro": "^2.1.2",
     "web-vitals": "^3.1.1"
   },
   "dependencies": {
+    "@astrojs/vercel": "^3.2.0",
     "@unocss/preset-web-fonts": "^0.50.4",
     "axios": "^1.3.4",
     "unocss": "^0.50.4"
